[package]
name = "solcandy"
version = "0.1.0"
edition = "2021"
description = "Useful utils for working with Metaplex candy machines(Solana blockchain)."

[dependencies]
thiserror = "1.0"
async-trait = "0.1.56"
solana-program = "1.10.0"
solana-sdk = "1.10.0"
solana-account-decoder = "1.10.0"
solana-client = "1.10.0"

[dev-dependencies]
tokio = "1.19"