[package]
name = "solcandy"
version = "0.1.0"
edition = "2021"
description = "Useful utils for working with Metaplex candy machines(Solana blockchain)."
license = "GPL-3.0"
homepage = "https://github.com/ftelnov/solcandy"
repository = "https://github.com/ftelnov/solcandy"
readme = "README.md"
documentation = "https://github.com/ftelnov/solcandy"
keywords = ["solana", "metaplex", "blockchain"]

[features]
# If enabled, include serde implementation for candy state.
serde = ["dep:serde"]

[dependencies]
thiserror = "1.0"
async-trait = "0.1.56"
solana-program = "1.10.0"
solana-sdk = "1.10.0"
solana-account-decoder = "1.10.0"
solana-client = "1.10.0"
serde = { version = "1.0", features = ["derive"], optional=true }

[dev-dependencies]
serde_json = { version = "1.0" }
tokio = "1.19"